FIX | fixed responsivity of header logo & burger menu on mobile v3

--- a/css/style-main.css
+++ b/css/style-main.css
@@ -7205,8 +7205,8 @@ blockquote p {
   }
   .logo-text-container {
     margin-top: 0px;
-    max-width: 284px;
-    /*height: 82px;*/
+    max-width: 254px;
+    height: 82px;
     padding: 0px !important;
     margin: 0px !important;
   }
@@ -7227,7 +7227,7 @@ blockquote p {
   .logo-text-container {
     margin-top: 0px;
     max-width: 308px;
-    /*height: 82px;*/
+    height: 82px;
     padding: 0px !important;
     margin: 0px !important;
   }
